tests/rgs/valid/multiple_phases.rgs
STORY quest PRIORITY 1.
    EVENT e ENVIRONMENT.
    ACTION a.
    PHASE p1.
    PHASE p2.
    PHASE p3.
    PHASE p4.
    AGENT Hero:
        DURING p1:
            WHEN e ENVIRONMENT:
                ENTER p2.
        DURING p2:
            WHEN e ENVIRONMENT:
                ENTER p3.
        DURING p3:
            WHEN e ENVIRONMENT:
                ENTER p4.
        DURING p4:
            WHEN e ENVIRONMENT:
                DO a.
