tests/rgs/semantic_errors/undeclared_phase_in_during.rgs
STORY quest PRIORITY 1.
    ACTION run.
    EVENT spotted ENVIRONMENT.
    PHASE active.
    AGENT Hero:
        DURING missing_phase:
            WHEN spotted ENVIRONMENT:
                DO run.
